tests/semantic_errors/andrei4_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = 34 - nil
end

main()
